improve Puzzle and Search

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,19 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
     hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
--   repo: https://github.com/psf/black
+      - id: check-yaml
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+  - repo: https://github.com/psf/black
     rev: 19.3b0
     hooks:
-    -   id: black
+      - id: black
+  - repo: local
+    hooks:
+      - id: unittest
+        name: unittest
+        entry: python3 -m unittest discover -s test -p "*.py"
+        language: python
+        'types': [ python ]
+        pass_filenames: false
