--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
     hooks:
       - id: unittest
         name: unittest
-        entry: python3 -m unittest discover -s test -p "*.py"
+        entry: python3 -m unittest discover -s tests -p "*.py"
         language: python
         'types': [ python ]
         pass_filenames: false
