--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # Dev dependencies
-black~=20.8b1
-pre-commit~=2.12.0
+black==23.3.0
+pre-commit==3.3.0
 
 # Server dependencies
-gunicorn~=20.1.0
-flask~=1.1.2
-flask-cors~=3.0.10
+gunicorn==20.1.0
+flask==2.3.2
+flask-cors==3.0.10
